# Go

./: CMakeLists.txt  main.c
